// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`extractDomainObjectMetadataForDeclarationInFile should be able to extract domain object metadata for a literal with string literal unions 1`] = `
DomainObjectMetadata {
  "decorations": {
    "alias": null,
    "origin": null,
    "primary": null,
    "unique": null,
    "updatable": null,
  },
  "extends": "DomainLiteral",
  "name": "ClaimSearch",
  "properties": {
    "isActive": DomainObjectPropertyMetadata {
      "name": "isActive",
      "nullable": false,
      "required": true,
      "type": "BOOLEAN",
    },
    "mode": DomainObjectPropertyMetadata {
      "name": "mode",
      "nullable": false,
      "required": true,
      "type": "STRING",
    },
    "name": DomainObjectPropertyMetadata {
      "name": "name",
      "nullable": false,
      "required": true,
      "type": "STRING",
    },
    "priority": DomainObjectPropertyMetadata {
      "name": "priority",
      "nullable": false,
      "required": true,
      "type": "NUMBER",
    },
    "sortBy": DomainObjectPropertyMetadata {
      "name": "sortBy",
      "nullable": false,
      "required": false,
      "type": "STRING",
    },
    "status": DomainObjectPropertyMetadata {
      "name": "status",
      "nullable": false,
      "required": true,
      "type": "STRING",
    },
    "tags": DomainObjectPropertyMetadata {
      "name": "tags",
      "nullable": false,
      "of": {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "required": true,
      "type": "ARRAY",
    },
    "verdict": DomainObjectPropertyMetadata {
      "name": "verdict",
      "nullable": true,
      "required": true,
      "type": "STRING",
    },
  },
}
`;

exports[`extractDomainObjectMetadataForDeclarationInFile should be able to extract domain object metadata for a more complicated entity 1`] = `
DomainObjectMetadata {
  "decorations": {
    "alias": null,
    "origin": null,
    "primary": null,
    "unique": [
      "upc",
    ],
    "updatable": [
      "colors",
      "quantity",
      "description",
    ],
  },
  "extends": "DomainEntity",
  "name": "Item",
  "properties": {
    "colors": DomainObjectPropertyMetadata {
      "name": "colors",
      "nullable": false,
      "of": {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "required": true,
      "type": "ARRAY",
    },
    "description": DomainObjectPropertyMetadata {
      "name": "description",
      "nullable": false,
      "required": true,
      "type": "STRING",
    },
    "price": DomainObjectPropertyMetadata {
      "name": "price",
      "nullable": false,
      "required": true,
      "type": "NUMBER",
    },
    "upc": DomainObjectPropertyMetadata {
      "name": "upc",
      "nullable": false,
      "required": true,
      "type": "STRING",
    },
  },
}
`;

exports[`extractDomainObjectMetadataForDeclarationInFile should be able to extract domain object metadata for a simple entity 1`] = `
DomainObjectMetadata {
  "decorations": {
    "alias": null,
    "origin": null,
    "primary": null,
    "unique": [
      "gate",
    ],
    "updatable": [
      "operational",
      "phoneNumber",
    ],
  },
  "extends": "DomainEntity",
  "name": "LoadingDock",
  "properties": {
    "gateNumber": DomainObjectPropertyMetadata {
      "name": "gateNumber",
      "nullable": false,
      "required": true,
      "type": "NUMBER",
    },
    "id": DomainObjectPropertyMetadata {
      "name": "id",
      "nullable": false,
      "required": false,
      "type": "NUMBER",
    },
    "operational": DomainObjectPropertyMetadata {
      "name": "operational",
      "nullable": false,
      "required": true,
      "type": "BOOLEAN",
    },
    "phoneNumber": DomainObjectPropertyMetadata {
      "name": "phoneNumber",
      "nullable": true,
      "required": true,
      "type": "STRING",
    },
    "uuid": DomainObjectPropertyMetadata {
      "name": "uuid",
      "nullable": false,
      "required": false,
      "type": "STRING",
    },
  },
}
`;

exports[`extractDomainObjectMetadataForDeclarationInFile should be able to extract domain object metadata for an entity owned by another service via origin 1`] = `
DomainObjectMetadata {
  "decorations": {
    "alias": null,
    "origin": "ahbode/svc-home-services",
    "primary": [
      "uuid",
    ],
    "unique": [
      "slug",
    ],
    "updatable": [],
  },
  "extends": "DomainEntity",
  "name": "SvcHomeServicesHomeService",
  "properties": {
    "name": DomainObjectPropertyMetadata {
      "name": "name",
      "nullable": false,
      "required": true,
      "type": "STRING",
    },
    "slug": DomainObjectPropertyMetadata {
      "name": "slug",
      "nullable": false,
      "required": true,
      "type": "STRING",
    },
    "uuid": DomainObjectPropertyMetadata {
      "name": "uuid",
      "nullable": false,
      "required": false,
      "type": "STRING",
    },
  },
}
`;

exports[`extractDomainObjectMetadataForDeclarationInFile should be able to extract domain object metadata for simple literal 1`] = `
DomainObjectMetadata {
  "decorations": {
    "alias": null,
    "origin": null,
    "primary": null,
    "unique": null,
    "updatable": null,
  },
  "extends": "DomainLiteral",
  "name": "Address",
  "properties": {
    "city": DomainObjectPropertyMetadata {
      "name": "city",
      "nullable": false,
      "required": true,
      "type": "STRING",
    },
    "postal": DomainObjectPropertyMetadata {
      "name": "postal",
      "nullable": false,
      "required": true,
      "type": "STRING",
    },
    "state": DomainObjectPropertyMetadata {
      "name": "state",
      "nullable": false,
      "required": true,
      "type": "STRING",
    },
    "street": DomainObjectPropertyMetadata {
      "name": "street",
      "nullable": false,
      "required": true,
      "type": "STRING",
    },
    "suite": DomainObjectPropertyMetadata {
      "name": "suite",
      "nullable": true,
      "required": true,
      "type": "STRING",
    },
  },
}
`;
